<resources>
    <string name="app_name">فرازیست</string>
    <string name="app_lan">&gt;&lt;&amp;"'«»|%!@#$%*()_^-+.=~/?:\;,{}[]0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="english_number_char">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="name">نام</string>
    <string name="recordNewCustomWaste">ثبت پسماند متفرقه جدید</string>
    <string name="systemName">نام دستگاه:</string>
    <string name="count">تعداد</string>
    <string name="family">نام خانوادگی</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="username">نام کاربری</string>
    <string name="gender_dot">جنسیت : </string>
    <string name="male">مرد</string>
    <string name="female">زن</string>
    <string name="register">ثبت</string>
    <string name="verify">تایید</string>
    <string name="login">ورود</string>
    <string name="signUp">ثبت نام</string>
    <string name="referenceCode">کد معرف</string>
    <string name="referenceCode_Optional">کد معرف (اختیاری)</string>
    <string name="address">آدرس</string>
    <string name="addressExample">آدرس : تهران، بلوار ...</string>
    <string name="address_optional">آدرس (اختیاری)</string>
    <string name="signupAccount">ثبت نام حساب کاربری</string>
    <string name="mobileNumber">شماره موبایل</string>
    <string name="birthdayDate">تاریخ تولد</string>
    <string name="invalidMobileNumber">شماره موبایل معتبر نمی باشد</string>
    <string name="enterYourPhoneNumber">شماره موبایل خود را جهت ورود به برنامه وارد کنید.</string>
    <string name="enterYourPassword">کلمه عبور خود را وارد کنید.</string>
    <string name="invalidInputType">ورودی نامعتبر است</string>
    <string name="invalidWasteName">نام پسماند نمی تواند خالی باشد.</string>
    <string name="validMobileNumber">معتبر</string>
    <string name="from">از</string>
    <string name="fillAllRequiredFields">تمام موارد ضروری باید پر شوند</string>
    <string name="cancel">لغو</string>
    <string name="cancel2">انصراف</string>
    <string name="send">ارسال</string>
    <string name="sendRequest">ارسال درخواست</string>
    <string name="editRequestAmount">ویرایش مبلغ درخواست</string>
    <string name="sent">ارسال شد!</string>
    <string name="requestSent">درخواست با موفقیت ارسال شد.</string>
    <string name="sentData">اطلاعات ارسال شد.</string>
    <string name="requestSend">ارسال درخواست</string>
    <string name="resend">ارسال مجدد</string>
    <string name="wrongCode">کد وارد شده صحیح نمی باشد.</string>
    <string name="exactAddress">آدرس دقیق</string>
    <string name="timeOut">زمان وارد کردن کد تمام شد. لطفا درخواست مجدد کد بدهید</string>
    <string name="unregisteredUser">کاربری با شماره موبایل وارد شده ثبت نشده است.</string>
    <string name="verificationCodeDoesntSend">کد فعال سازی ارسال نشد؟</string>
    <string name="verificationCodeDesc1">کد فعال سازی ارسال شده به شماره</string>
    <string name="verificationCodeDesc2">را وارد کنید.</string>
    <string name="wallet">کیف پول</string>
    <string name="ChargingCitizenWallet">شارژ کیف پول شهروند</string>
    <string name="verificationCode">کد تایید</string>
    <string name="packageRequest">درخواست تحویل</string>
    <string name="complications">پرداخت عوارض</string>
    <string name="store">فروشگاه</string>
    <string name="bills">پرداخت قبوض</string>
    <string name="invoice">صورت حساب</string>
    <string name="buyCharge">خرید شارژ</string>
    <string name="lifeInsurance">پرداخت بیمه عمر</string>
    <string name="InsuranceInstallments">اقساط بیمه</string>
    <string name="buildingCharging">شارژ ساختمان</string>
    <string name="investment">سرمایه گذاری</string>
    <string name="management">مدیریت</string>
    <string name="contactManagement">ارتباط با مدیریت</string>
    <string name="walletBalance">موجودی کیف پول من</string>
    <string name="notRegisteredCardNumber">شماره کارت ثبت نشده است</string>
    <string name="requestMoneyDesc">شهروند محترم، لطفا جهت ثبت درخواست مبلغ را وارد نمایید.</string>
    <string name="requestMoneySent">درخواست انتقال به کارت ارسال شد.</string>
    <string name="myWallet">کیف پول من</string>
    <string name="balance">موجودی</string>
    <string name="cancelRequest">لغو درخواست</string>
    <string name="doYouWantToCancelRequestMoney">آیا درخواست انتقال مبلغ به کارت بانک خود را لغو می کنید؟</string>
    <string name="requestReports">گزارش درخواست ها</string>
    <string name="farazistAccountBalance">موجودی حساب فرازیست</string>
    <string name="tooman">تومان</string>
    <string name="agreedPriceForCustomItems">قیمت توافقی برای پسماندهای متفرقه</string>
    <string name="transfer">انتقال</string>
    <string name="credit_transfer">انتقال اعتبار</string>
    <string name="transferFromWallet">انتقال از کیف پول</string>
    <string name="getMoney">دریافت</string>
    <string name="turnover">گردش حساب</string>
    <string name="amount">مبلغ</string>
    <string name="otherAmounts">سایر مبالغ</string>
    <string name="RVMtransactionAmount">مبلغ تراکنش RVM</string>
    <string name="transferAmount">مبلغ مورد نظر برای انتقال</string>
    <string name="depositToYourWallet">تومان به حساب کیف پول شما واریز شد</string>
    <string name="deposit">واریز</string>
    <string name="withdrawFromYourWallet">تومان از حساب کیف پول شما کسر شد</string>
    <string name="transferWalletToWallet">انتقال پول از کیف پول شما به کیف پول دیگر</string>
    <string name="transferNewTransactionOwnerToClient">انتقال پول به کیف پول مشتری</string>
    <string name="destinationMobileNumber">شماره موبایل مقصد</string>
    <string name="destinationMobileNumberOrID">شماره موبایل یا شناسه مقصد</string>
    <string name="destinationMobileNumberOrIDHint">09********* یا f*...*</string>
    <string name="connectionError">خطا در برقراری ارتباط با سرور</string>
    <string name="connectionError_checkYourConnection">خطا در برقراری ارتباط با سرور، لطفا اتصال خود را بررسی کنید</string>
    <string name="lowTransferMoney">حداقل مبلغ قابل انتقال 200 تومان می باشد</string>
    <string name="lessMoney">موجودی کیف پول شما کافی نمی باشد</string>
    <string name="equalOriginAndDestination">شماره موبایل مبدا و مقصد یکسان است.</string>
    <string name="equalOriginAndDestinationID">شناسه مبدا و مقصد یکسان است.</string>
    <string name="sendFrom_">برداشت از کیف پول به شماره :</string>
    <string name="SendTo_">واریز به کیف پول به شماره :</string>
    <string name="name_">به نام :</string>
    <string name="to_name">به نام</string>
    <string name="comingSoon">به زودی فعال می شود</string>
    <string name="setting">تنظیمات</string>
    <string name="applicationSetting">تنظیمات برنامه</string>
    <string name="numberOfMyClinets">تعداد شهروندان من</string>
    <string name="exit">خروج از حساب کاربری</string>
    <string name="systemInfo">مشخصات دستگاه متصل</string>
    <string name="commonQuestions">پرسش های رایج</string>
    <string name="aboutUs">درباره ما</string>
    <string name="contactUs">تماس با ما</string>
    <string name="appGuide">راهنمای برنامه</string>
    <string name="done">انجام شد!</string>
    <string name="invideFriends">دعوت دوستان</string>
    <string name="addNewTransaction">ثبت تراکنش جدید</string>
    <string name="duplicateMobileNumber">شماره موبایل وارد شده قبلا ثبت شده است</string>
    <string name="successfullyTransferred">انتقال با موفقیت انجام شد</string>
    <string name="doYouWantToExitFromAccount">آیا از حساب کاربری خود خارج می شوید؟</string>
    <string name="doYouWantExit">از برنامه خارج می شوید؟</string>
    <string name="noMoneyToSend">هیچ مبلغی برای ارسال موجود ندارد</string>
    <string name="noWasteToSend">هیچ پسماندی برای تحویل ثبت نشده است</string>
    <string name="fillUndefinedItemName">برای پسماند متفرقه نام مناسب قرار دهید.</string>
    <string name="fillUndefinedItemProps">در صورت انتخاب پسماند متفرقه، مشخصات آن را کامل وارد کنید.</string>
    <string name="requestPackageList">لیست تحویل ها</string>
    <string name="notFound">پیدا نشد</string>
    <string name="goNextStep">برو به مرحله بعد</string>
    <string name="unsuccessfulAct">عملیات ناموفق بود</string>
    <string name="successfulAct">عملیات با موفقیت انجام شد</string>
    <string name="successfulTransaction">تراکنش با موفقیت انجام شد</string>
    <string name="successfulPackageRequest">درخواست تحویل پکیج با موفقیت ارسال شد.</string>
    <string name="retry">تلاش مجدد</string>
    <string name="pleaseWait">لطفا منتظر بمانید ...</string>
    <string name="informationChanged">اطلاعات شما تغییر کرد.</string>
    <string name="unit">واحد</string>
    <string name="sum">مجموع</string>
    <string name="reject">رد</string>
    <string name="customItemsPriceIsAgreed">قیمت پسماندهای متفرقه توافقی است</string>
    <string name="maximumListOverflow">امکان ثبت درخواست بیشتر وجود ندارد</string>
    <string name="value">مقدار</string>
    <string name="otherServices">سایر خدمات</string>
    <string name="myShop">فروشگاه من</string>
    <string name="delivery">تحویل</string>
    <string name="connectedSystemState_">وضعیت دستگاه : </string>
    <string name="connectedSystemState">وضعیت دستگاه</string>
    <string name="rejectReason">علت رد کردن درخواست تحویل</string>
    <string name="accountEdit">ویرایش حساب کاربری</string>
    <string name="payCash">پرداخت وجه نقد</string>
    <string name="chargeWallet">شارژ کیف پول</string>
    <string name="system">دستگاه</string>
    <string name="deliveredPackageTo">تحویل به</string>
    <string name="deliveredPackageFrom">تحویل از</string>
    <string name="agreedPrice">قیمت توافقی</string>
    <string name="price">قیمت</string>
    <string name="weight">وزن</string>
    <string name="totalPrice_tooman">قیمت کل (تومان)</string>
    <string name="noChangesSaved">تغییرات ذخیره نشد</string>
    <string name="agreed">توافقی</string>
    <string name="delete">حذف</string>
    <string name="change">تغییر عکس</string>
    <string name="systemProfile">پروفایل دستگاه</string>
    <string name="imageSelection">انتخاب عکس</string>
    <string name="packageDeliveryID">شناسه تحویل</string>
    <string name="scanFor">اسکن کد به منظور ...</string>
    <string name="loginSystem">ورود به نرم افزار دستگاه RVM</string>
    <string name="connectToSystem">اتصال حساب کاربری به دستگاه RVM</string>
    <string name="citizenID">شناسه شهروند</string>
    <string name="packageDelivery">درخواست تحویل</string>
    <string name="wasteDelivery">تحویل حضوری پسماند</string>
    <string name="deliveryID">شناسه تحویل</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="ok">باشه</string>
    <string name="downloadFromBazaar">دانلود از بازار</string>
    <string name="downloadFromPlayStore">دانلود از پلی استور</string>
    <string name="share">اشتراک گذاری</string>
    <string name="openLocation">برای دریافت نزدیک ترین دستگاه ها موقعیت یاب را روشن کنید</string>
    <string name="please">لطفا</string>
    <string name="scan">خود را اسکن کنید.</string>
    <string name="saveIntoGallery">ذخیره در گالری</string>
    <string name="permission_required">مجوز دسترسی</string>
    <string name="phone_call_required_text">دستور شما نیازمند تایید مجوز "تماس تلفنی" است.</string>
    <string name="write_sdcard_required_text">دستور شما نیازمند تایید مجوز "دسترسی به حافظه" است.</string>
    <string name="image_permission_desc">انتخاب تصویر نیازمند تایید مجوز دسترسی به تصاویر است.</string>
    <string name="registerAccountMessage">حساب کاربری شما به هیچ دستگاه فرازیستی متصل نشده است. برای درخواست تحویل پسماند نیاز است تا به یک دستگاه متصل شوید تا درخواست شما به مالک آن دستگاه ارسال شود و بتوانید از خدمات مالک دستگاه بهره مند شوید. برای اتصال به دستگاه از منوی سمت راست، بخش مشخصات دستگاه متصل، اقدام کنید.</string>
    <string name="destinationTransaction">مشخصات مقصد تراکنش</string>
    <string name="check">بررسی</string>
    <string name="wasteTitle">عنوان پسماند</string>
    <string name="updateInfo">اطلاعات به روز رسانی</string>
</resources>