<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/dialogLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline17"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/recordNewCustomWaste"
                android:textColor="#000"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/transferWalletToWallet"
                android:textColor="#000"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="3"
                android:background="#0000"
                android:ems="10"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:hint="@string/wasteTitle"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_2sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center">

                </androidx.appcompat.widget.AppCompatSpinner>

                <TextView
                    android:id="@+id/textView74"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/persian"
                    android:gravity="right|center_vertical"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/unit"
                    android:textColor="#000"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtCount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="3"
                android:background="#0000"
                android:ems="10"
                android:fontFamily="@font/persian"
                android:gravity="center"
                android:hint="@string/count"
                android:inputType="number"
                android:maxLength="8"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edtPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="3"
                android:background="#0000"
                android:ems="10"
                android:fontFamily="@font/persian"
                android:gravity="center"
                android:hint="@string/totalPrice_tooman"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btnRecord"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_login_selection"
                android:fontFamily="@font/persian"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>