<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@+id/guideline23"
            app:layout_constraintEnd_toStartOf="@+id/guideline17"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline22">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/destinationTransaction"
                android:textColor="#000"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/transferWalletToWallet"
                android:textColor="#000"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:text="@string/destinationMobileNumberOrID"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtMobileOrID"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:digits="0123456789"
                android:ems="10"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:hint="@string/destinationMobileNumberOrIDHint"
                android:inputType="number|phone"
                android:maxLength="11"
                android:textColor="#000"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:text="@string/username"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/persian"
                android:gravity="right|center_vertical"
                android:maxLength="10"
                android:textColor="#000"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selection"
                    android:fontFamily="@font/persian"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="@dimen/_10sdp" />

                <Button
                    android:id="@+id/btnCheck"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selection"
                    android:fontFamily="@font/persian"
                    android:text="@string/check"
                    android:textColor="#fff"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <project.custom.LinearProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp">

            </project.custom.LinearProgressBar>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.62" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>